# journal-graph

./: .gitignore  CMakeLists.txt  README.md  main.cpp  results.md
Dataset/: bfs.cpp  bfs.h  parsing.cpp  parsing_authors.cpp
catch_tests/: tests.cpp
data/: dblp.v12.json  dfs_test.json  dfs_test.txt  output.json  sample_data_serialized_line.json  sample_data_unserialized.json  tarjanstest.json
dataset/: parsing.cpp
graph/: authorGraph.cpp  authorGraph.h  dijkstrasSP.cpp  graph_defines.h  journalGraph.cpp  journalGraph.h  tarjansSCC.cpp  utils.cpp
lib/: graph_defines.h
misc/: test_parser.cpp  truncate.py
parsing/: parsing.cpp  parsing.h  temp.ipynb
src/: authorGraph.cpp  authorGraph.h  db_interface.cpp  dijkstrasSP.cpp  journalGraph.cpp  journalGraph.h  main.cpp  paper_game.cpp  parse.cpp  parse_data.cpp  tarjansSCC.cpp  utils.cpp
storage/: btree_db.cpp  btree_db.h  btree_db.hpp  btree_db_v2.hpp  btree_types.cpp  temp.ipynb  vector_db.cpp
